[package]
name = "test-income-app"
version = "0.1.0"
authors = ["oohsai <s72454726@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"

[build-dependencies]
slint-build = "1.5"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.oohsai."